tests/__snapshots__/api-toBeNull.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeNull: stderr 1`] = `
"Error: Type 'null' is not identical to type 'void'.

   7 |   expect(returnsNull()).type.toBeNull();
   8 | 
>  9 |   expect(returnsVoid()).type.toBeNull();
     |                              ^
  10 | });
  11 | 
  12 | test("is NOT null?", () => {

       at ./__typetests__/toBeNull.tst.ts:9:30 ❭ is null?

Error: Type 'null' is identical to type 'null'.

  13 |   expect(returnsVoid()).type.not.toBeNull();
  14 | 
> 15 |   expect(returnsNull()).type.not.toBeNull();
     |                                  ^
  16 | });
  17 | 

       at ./__typetests__/toBeNull.tst.ts:15:34 ❭ is NOT null?

"
`;

exports[`toBeNull: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeNull.tst.ts
  × is null?
  × is NOT null?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
